services/flutter/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flutter
  template:
    metadata:
      labels:
        app: flutter
    spec:
      containers:
        - name: app
          image: ghcr.io/cirruslabs/flutter:stable
          command: ["sh", "-c", "cd /app && ./bin/init && exec ./bin/dev"]
          ports:
            - containerPort: 8080
